--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
   </table>
   <hr>
   <a href="hobbies.html">My hobbies</a>
-  <a href="Contact.html">Contact me</a>
+  <a href="contact.html">Contact me</a>
   <a href="emad.html">emad</a>
 </body>
 
